--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,8 @@
     "@directus/sdk": "^13.0.2",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
-    "nodemailer": "^6.9.7",
     "react": "^18",
-    "react-dom": "^18",
-    "resend": "^2.0.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
